# libwpg

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac  libwpg.pc.in
debian/: changelog  control  libwpg-0.3-3.install  rules
docs/: Makefile.in
docs/doxygen/: Makefile.in  doxygen.cfg
inc/: Makefile.in
inc/libwpg/: Makefile.am  Makefile.in
src/: Makefile.in
src/conv/: Makefile.in
src/conv/raw/: Makefile.in
src/conv/svg/: Makefile.in
src/fuzz/: Makefile.am  Makefile.in
src/lib/: Makefile.am  Makefile.in  libwpg.rc
